...
        BetterOrioksPopup(
            title = stringResource(Res.string.attention),
            onDismiss = onDismiss,
            modifier = modifier.fillMaxWidth(0.85f),
            columnModifier = Modifier.wrapContentHeight(),
            buttons = {
                TextButton(onClick = onActionButtonClick, modifier = Modifier.testTag("ExitPopupButton")) {
                    Text(actionButtonText, color = MaterialTheme.colorScheme.error)
                }
                TextButton(onClick = onDismiss) {
                    Text(stringResource(Res.string.cancel))
                }
            }
...
